<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_goals"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_slideshow"
            android:enabled="false"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/section_other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send"
                android:enabled="false"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send"
                android:visible="false" />
        </menu>
    </item>

</menu>
