<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.editGoal.EditGoal"
    tools:showIn="@layout/activity_edit_goal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="297dp">


        <TextView
            android:id="@+id/goalNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/goal_name_textview"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/achieveTextField"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/achieve_textfield"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthlyButton" />

        <Button
            android:id="@+id/monthlyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/monthly_button"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/achieveTextField"
            app:layout_constraintEnd_toStartOf="@+id/yearlyButton"
            app:layout_constraintStart_toEndOf="@+id/weeklyButton"
            app:layout_constraintTop_toBottomOf="@+id/goalPeriodTextView" />

        <Button
            android:id="@+id/yearlyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/yearly_button"
            app:layout_constraintBottom_toTopOf="@id/achieveTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/monthlyButton"
            app:layout_constraintTop_toBottomOf="@+id/goalPeriodTextView" />

        <Button
            android:id="@+id/weeklyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/weekly_button"
            app:layout_constraintBottom_toTopOf="@+id/achieveTextField"
            app:layout_constraintEnd_toStartOf="@+id/monthlyButton"
            app:layout_constraintStart_toEndOf="@+id/dailyButton"
            app:layout_constraintTop_toBottomOf="@+id/goalPeriodTextView" />

        <TextView
            android:id="@+id/goalTypeView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/goal_type_view"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalNameEditText" />

        <Button
            android:id="@+id/buildButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/build_button"
            app:layout_constraintBottom_toTopOf="@+id/goalPeriodTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/quitButton"
            app:layout_constraintTop_toBottomOf="@+id/goalTypeView" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/quit_button"
            app:layout_constraintBottom_toTopOf="@+id/goalPeriodTextView"
            app:layout_constraintLeft_toRightOf="@+id/buildButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalTypeView" />

        <TextView
            android:id="@+id/goalPeriodTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/goal_period_textview"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buildButton" />

        <Button
            android:id="@+id/dailyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/daily_button"
            app:layout_constraintBottom_toTopOf="@+id/achieveTextField"
            app:layout_constraintEnd_toStartOf="@+id/weeklyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalPeriodTextView" />

        <EditText
            android:id="@+id/frequencyEditText"
            android:layout_width="59dp"
            android:layout_height="44dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:maxLength="4"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/frequencyTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achieveTextField"
            android:autofillHints="3" />

        <TextView
            android:id="@+id/frequencyTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="124dp"
            android:text="@string/frequency_textfield_daily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frequencyEditText"
            app:layout_constraintTop_toBottomOf="@+id/achieveTextField" />


        <EditText
            android:id="@+id/goalNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/goal_name_edittext"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalNameTextView" />


        <!--

    <TextView
        android:id="@+id/reminderTexfield"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/reminder_texfield"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequencyEditText" />

    <Button
        android:id="@+id/addReminderButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:text="@string/add_reminder_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reminderTexfield"
        app:layout_constraintTop_toBottomOf="@+id/frequencyEditText" />

      -->

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>